[package]
name = "mc173"
version = "0.1.0"
edition = "2021"
description = "Base data structure and logic for running a Minecraft beta 1.7.3 world"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.11"
indexmap = "2.0"
glam = "0.24"

derive_more = { version = "=1.0.0-beta.6", features = ["deref", "deref_mut"] }
